# fasindex

./: .gitignore  CMakeLists.txt  README.md  array.hpp  array_proxy.hpp  buffer_base.hpp  chain.hpp  chunk.hpp  fixed_size_blocks_allocation.hpp  index_array.hpp  main.cpp  managed_allocator.hpp  mmap_buffer.hpp  next_index_holder.hpp  offset_iterator.hpp  offset_pointer.hpp  sorted_vector.hpp  test_chunk.cpp  test_hitlist.cpp  test_set.cpp  test_sorted_vector.cpp  test_vector.cpp  value_array.hpp  vector.hpp  vector_list.hpp  vector_list_iterator.hpp
pmi/: allocator.hpp  array.hpp  map_iterator.hpp  set.hpp  sorted_array.hpp  vset.hpp  vset_iterator.hpp
pmi/buffer/: buffer_base.hpp  mem_buffer.hpp  mmap_buffer.hpp  shm_buffer.hpp
pmi/memory/: chain.hpp  chain_memory.hpp  chunk.hpp  offset_pointer.hpp
pmi/vector/: set_item.hpp  sorted_array.hpp
tests/: CMakeLists.txt
tests/vset/: CMakeLists.txt  hitlist_bench.cpp  test_vset1.cpp  vset.txt  vset_bench.cpp
